--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
             <!-- Table of contents will be generated here -->
         </div>
         <main id="content" class="main-content" role="main">
-                    </main>
+            {{content}}
+        </main>
     </div>
     <script>
         // Select all headers within the main content
