--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,16 @@
 <head>
-    <link rel="stylesheet" href="../assets/style.css" />
+    <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#157878">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 </head>
 <body class="light">
     <header class="page-header" role="banner">
         <div class="page-header-left">
-            <h1 class="page-header-left"># Marc Nafria</h1>
+            <h1 class="page-header-left"># Apunts GEI</h1>
         </div>
         <div class="page-header-right">
             <button id="theme-switcher" class="switch-button">
